test/compiler/invalid_programs/syntax/invalid_binary_operation.jm
#!SyntaxError

def self "foo" other
  puts(other)
end
